# serializer version: 1
# name: TestBreadcrumb.test_category_forum[category_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_child_category_forum[child_category_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/a-category-[PK of Forum]/">A Category</a>
                      </li>
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_forum[forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_grandchild_category_forum[grandchild_category_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/b-category-[PK of Forum]/">B Category</a>
                      </li>
                  
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/b-category-forum-[PK of Forum]/">B Category - Forum</a>
                      </li>
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_newsfeed_forum[newsfeed_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="newsfeed_breadcrumb" href="/news/">Actualités</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_sub_discussion_area_forum[sub_discussion_area_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_sub_forum[sub_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/b-forum-[PK of Forum]/">B Forum</a>
                      </li>
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestDocumentationCategoryForumContent.test_documentation_category_foot_content[documentation_category_add_file_control]
  '''
  <section class="s-section" id="add-documentation-to-category-control">
              <div class="s-section__container container">
                  <div class="s-section__row row">
                      <div class="s-section__col col-12">
                          <a aria-label="Ajouter une fiche pratique" class="btn btn-outline-primary" href="/documentation/category/9999/create/" role="button">Ajouter une fiche pratique</a>
                      </div>
                  </div>
              </div>
          </section>
  '''
# ---
# name: TestDocumentationCategoryForumContent.test_documentation_category_subforum_list[documentation_category_subforum_list]
  '''
  <div class="row mt-4" id="documentation-category-subforums">
          
              <div class="col-12 col-md-4 mb-3 mb-md-5">
                  <div class="card c-card has-one-link-inside h-100">
                      
                          <div class="card-header card-header-thumbnail rounded">
                              <img alt="Test Forum" class="img-fitcover img-fluid" loading="lazy" src="[img src]"/>
                          </div>
                      
                      <div class="card-body pb-0">
                          <p class="h3 lh-base">Test Forum</p>
                          <div class="mt-3">Test description</div>
                      </div>
                      <div class="card-footer text-end">
                          <a class="btn btn-sm btn-ico btn-link stretched-link matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="fiches_techniques" href="/forum/test-forum-10000/">
                              <i class="ri-arrow-right-line ri-lg"></i>
                          </a>
                      </div>
                  </div>
              </div>
          
      </div>
  '''
# ---
# name: TestDocumentationForumContent.test_documentation_forum_header_content[template_documentation_link_to_parent]
  '<a class="matomo-event h3 text-decoration-none d-inline-block" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/parent-forum-9999/">Les autres fiches du thème Parent-Forum</a>'
# ---
# name: TestDocumentationForumContent.test_documentation_forum_share_actions[template_documentation_social_share]
  '''
  <button aria-expanded="false" aria-haspopup="true" class="btn btn-sm btn-ico-only btn-secondary" data-bs-toggle="dropdown" id="dropdownMenuSocialShare10000" type="button">
      <i aria-label="Partager ce sujet sur " class="ri-share-fill ri-lg"></i>
  </button>
  '''
# ---
# name: TestDocumentationForumContent.test_documentation_forum_share_actions[template_documentation_upvotes]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-10000%2F%2310000" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>0</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumDetailContent.test_forum_detail_foot_content[forum_detail_forum_actions_block]
  '''
  <div class="col-12 col-sm-auto forum-actions-block">
                                  
                                      <a class="btn btn-primary btn-ico matomo-event" data-matomo-action="contribute" data-matomo-category="engagement" data-matomo-option="new_topic" href="/forum/test-forum-10000/topic/create/" rel="nofollow">
                                          <i class="ri-chat-new-line ri-lg"></i>
                                          <span>
                                              
                                                  Poser une question
                                              
                                          </span>
                                      </a>
                                  
                                  
                              </div>
  '''
# ---
# name: TestForumDetailContent.test_forum_detail_header_content[forum_detail_heading]
  '''
  <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1>Test Forum</h1>
                      
                      <h2 class="mt-3">Test description</h2>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: TestForumDetailContent.test_forum_detail_subforum_content_rendered[forum_detail_subforums]
  '''
  <ul class="list-group mb-3 mb-md-5">
                                  
                                      <li class="list-group-item list-group-item-action d-flex flex-column flex-md-row justify-content-md-between">
                                          <div class="flex-grow-1">
                                              <a class="matomo-event h4 d-block mb-0" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/test-child-10001/">Test-Child</a>
                                              <small class="text-muted">
                                                  
                                                  
                                                      0 Sujet
                                                  
                                                  -
                                                  
                                                      0 Message
                                                  
                                              </small>
                                          </div>
                                      </li>
                                  
                              </ul>
  '''
# ---
# name: TestForumViewContent.test_not_rated_forum[not_rated_forum]
  '''
  <div class="mb-5 rating" id="rating-area1">
          <hr/>
          
              <h3 class="h3">Cette fiche vous a-t-elle été utile ?</h3>
              <form hx-post="/forum/b-category-forum-[PK of Forum]/rate/" hx-swap="outerHTML" hx-target="#rating-area1" id="rating-button">
                  <div aria-label="Notation de la fiche pratique" class="btn-group btn-group-lg" role="group">
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="1">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="2">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="3">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="4">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="5">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                  </div>
              </form>
          
      </div>
  '''
# ---
# name: TestForumViewContent.test_rated_forum[rated_forum]
  '''
  <div class="mb-5 rating" id="rating-area1">
          <hr/>
          
              <h3 class="h3">Merci d'avoir noté cette fiche !</h3>
              <div aria-label="Notation de la fiche pratique" class="btn-group btn-group-lg" role="group">
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
              </div>
          
      </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[0-False][upvotes_counts_0]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-forum-[PK of Forum]%2F%23[PK of Forum]" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>0</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[0-True][upvotes_counts_0]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-forum-[PK of Forum]%2F%23[PK of Forum]" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>0</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[0-True][upvotes_counts_0_self_upvoted]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <form hx-post="/upvote/forum/" hx-swap="outerHTML" hx-target="#upvotesarea10000" id="upvote-button10000">
                  <input name="pk" type="hidden" value="10000"/>
                  <button class="btn btn-sm btn-ico btn-secondary matomo-event px-2" data-matomo-action="upvote" data-matomo-category="engagement" data-matomo-option="post" title="Sauvegarder" type="submit">
                      <i aria-hidden="true" class="ri-bookmark-fill me-1"></i><span>1</span>
                  </button>
              </form>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[1-False][upvotes_counts_1]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-forum-[PK of Forum]%2F%23[PK of Forum]" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>1</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[1-True][upvotes_counts_1]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-forum-[PK of Forum]%2F%23[PK of Forum]" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>1</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[1-True][upvotes_counts_1_self_upvoted]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <form hx-post="/upvote/forum/" hx-swap="outerHTML" hx-target="#upvotesarea10000" id="upvote-button10000">
                  <input name="pk" type="hidden" value="10000"/>
                  <button class="btn btn-sm btn-ico btn-secondary matomo-event px-2" data-matomo-action="upvote" data-matomo-category="engagement" data-matomo-option="post" title="Sauvegarder" type="submit">
                      <i aria-hidden="true" class="ri-bookmark-fill me-1"></i><span>2</span>
                  </button>
              </form>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[2-False][upvotes_counts_2]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-forum-[PK of Forum]%2F%23[PK of Forum]" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>2</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[2-True][upvotes_counts_2]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico btn-link btn-secondary px-2" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-forum-[PK of Forum]%2F%23[PK of Forum]" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>2</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_upvotes_counts[2-True][upvotes_counts_2_self_upvoted]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <form hx-post="/upvote/forum/" hx-swap="outerHTML" hx-target="#upvotesarea10000" id="upvote-button10000">
                  <input name="pk" type="hidden" value="10000"/>
                  <button class="btn btn-sm btn-ico btn-secondary matomo-event px-2" data-matomo-action="upvote" data-matomo-category="engagement" data-matomo-option="post" title="Sauvegarder" type="submit">
                      <i aria-hidden="true" class="ri-bookmark-fill me-1"></i><span>3</span>
                  </button>
              </form>
          
      
  </div>
  '''
# ---
